# Skotch-App

./: Cargo.toml  README.md  Setup.md  colors.txt
src/: database.rs  main.rs  video.rs
static/: index.html
static/user/: login.html  profile.html  register.html
